# llm-embedrs

./: Cargo.toml  readme.md
src/: db.rs  func.rs  main.rs  onnx.rs  tokenize.rs
