[package]
name = "llm-embedrs"
version = "0.1.0"
edition = "2024"

[dependencies]
byteorder = "1.5.0"
clap = { version = "4.5.40", features = ["derive"] }
ndarray = "0.16.1"
ort = { version = "=2.0.0-rc.10", features = ["ndarray"] }
serde = "1.0.219"
serde_json = "1.0.140"
tokenizers = "0.21.1"

[dependencies.rusqlite]
version = "0.36.0"
features = ["bundled"]
